--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Thermal Monitor</string>
     <string name="offline">offline</string>
+    <string name="overlay_settings">overlay settings</string>
+    <string name="start_service">start service</string>
+    <string name="stop_service">stop service</string>
 </resources>
