--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="overlay_settings">overlay settings</string>
     <string name="start_service">start service</string>
     <string name="stop_service">stop service</string>
+    <string name="licenses">Licenses</string>
 </resources>
