Added bottom bar navigation with fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="monitor_not_supported_with_supplied_preferences">Monitor not supported with supplied preferences</string>
     <string name="preferences">Preferences</string>
     <string name="check_compatibility">Check compatibility</string>
+    <string name="home">Home</string>
+    <string name="settings">Settings</string>
+    <string name="about">About</string>
 </resources>
