--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="home">Home</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
+    <string name="service_is">Service is</string>
+    <string name="stopped">stopped</string>
+    <string name="start">start</string>
+    <string name="running">running</string>
+    <string name="stop">stop</string>
+    <string name="starting">starting…</string>
 </resources>
