Refactoring / Code cleanup / Better error handling and error messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,28 @@
     <string name="home">Home</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
-    <string name="service_is">Service is</string>
+    <string name="service_status">Service status</string>
     <string name="stopped">stopped</string>
     <string name="start">start</string>
     <string name="running">running</string>
     <string name="stop">stop</string>
     <string name="starting">starting…</string>
+    <string name="error">error</string>
+    <string name="timeout">Timeout</string>
+    <string name="timedOutWaitingForServiceToStart">Timed out waiting for service to start.</string>
+    <string name="rootAccessDenied">Root access denied</string>
+    <string name="couldNotAcquireRootAccess">Could not acquire root access.</string>
+    <string name="thermalMonitoringDisabled">Thermal Monitoring disabled</string>
+    <string name="sysClassThermalDoesNotExist">/sys/class/thermal does not exist.</string>
+    <string name="noValidThermalZonesAreEnabled">No valid thermal zones are enabled.</string>
+    <string name="couldNotReadThermalZones">Couldn\'t read thermal zones.</string>
+    <string name="canNotReadTypeOfAThermalZone">Can\'t read type of a thermal zone.</string>
+    <string name="canNotReadTemperatureOfAThermalZone">Can\'t read temp of a thermal zone.</string>
+    <string name="noRootIpcObjectPassedToMonitor">No root IPC object passed to monitor (root globally disabled?).</string>
+    <string name="unknownError">Unknown error.</string>
+    <string name="monitorConfigurationInvalid">Monitor configuration invalid</string>
+    <string name="cpuFrequencyMonitoringDisabled">CPU frequency monitoring disabled</string>
+    <string name="sysDevicesSystemCpuDoesNotExist">/sys/devices/system/cpu does not exist.</string>
+    <string name="canNotFindAnyCpusInSysDevicesSystemCpu">Can\'t find any CPUs in /sys/devices/system/cpu.</string>
+    <string name="canNotReadFrequencyOfACpu">Can\'t read frequency of a CPU.</string>
 </resources>
