Use data binding and update layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="monitorExitedWithException">Monitor exited with exception (check compatibility)</string>
     <string name="thermalMonitorNotSupportedWithCurrentConfiguration">Thermal monitor not supported with current configuration</string>
     <string name="cpuFrequencyMonitorNotSupportedWithCurrentConfiguration">CPU frequency monitor not supported with current configuration</string>
+    <string name="id">ID</string>
+    <string name="current_value">Current value</string>
 </resources>
