--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,11 @@
     <string name="title_activity_licenses">Licenses</string>
     <string name="next">next</string>
     <string name="finish">finish</string>
+    <string name="welcome_text">TODO: Welcome text</string>
+    <string name="welcome">Welcome</string>
+    <string name="overlay">Overlay</string>
+    <string name="overlay_permission_not_enabled_text">Overlay permission not enabled, open overlay settings to enable</string>
+    <string name="overlay_permission_not_enabled">Overlay permission not enabled</string>
+    <string name="overlay_permission_explanation">For the app to work, you need to enable a special permission, allowing this application to draw overlays over other applications. Press the button below to open the Android system dialog where you can enable this setting.</string>
+    <string name="overlay_permission_note">For security, older versions of Android might disable some features while the overlay is running. For example it might not be possible to install an application from an external source (the install button will not work). To fix this, it is enough to stop the service of this application while these features are required.</string>
 </resources>
