Improved error handling and error messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,22 +22,25 @@
     <string name="timeout">Timeout</string>
     <string name="timedOutWaitingForServiceToStart">Timed out waiting for service to start.</string>
     <string name="rootAccessDenied">Root access denied</string>
-    <string name="couldNotAcquireRootAccess">Could not acquire root access.</string>
+    <string name="couldNotAcquireRootAccess">Could not acquire root access. Make sure your devices is rooted and you permitted root access for this application.</string>
     <string name="thermalMonitoringNotAvailable">Thermal Monitoring not available</string>
-    <string name="sysClassThermalDoesNotExist">/sys/class/thermal does not exist.</string>
+    <string name="sysClassThermalDoesNotExist">/sys/class/thermal does not exist. This app may not work on your device. Try enabling root, if available.</string>
     <string name="noValidThermalZonesAreEnabled">No valid thermal zones are enabled.</string>
-    <string name="couldNotReadThermalZones">Couldn\'t read thermal zones.</string>
-    <string name="canNotReadTypeOfAThermalZone">Can\'t read type of a thermal zone.</string>
-    <string name="canNotReadTemperatureOfAThermalZone">Can\'t read temp of a thermal zone.</string>
+    <string name="couldNotReadThermalZones">Couldn\'t read thermal zones using root. This app may not work on your device.</string>
+    <string name="canNotReadTypeOfAThermalZone">Can\'t read type of a thermal zone. This app may not work on your device. Try enabling root, if available.</string>
+    <string name="canNotReadTypeOfAThermalZoneRoot">Can\'t read type of a thermal zone. This app may not work on your device.</string>
+    <string name="canNotReadTemperatureOfAThermalZone">Can\'t read temp of a thermal zone. This app may not work on your device. Try enabling root, if available.</string>
+    <string name="canNotReadTemperatureOfAThermalZoneRoot">Can\'t read temp of a thermal zone. This app may not work on your device.</string>
     <string name="noRootIpcObjectPassedToMonitor">No root IPC object passed to monitor (root globally disabled?).</string>
     <string name="unknownError">Unknown error.</string>
-    <string name="monitorConfigurationInvalid">Monitor configuration invalid</string>
+    <string name="monitorConfigurationInvalid">Monitor configuration invalid. Please try to reset the app.</string>
     <string name="cpuFrequencyMonitoringNotAvailable">CPU frequency monitoring not available</string>
     <string name="sysDevicesSystemCpuDoesNotExist">/sys/devices/system/cpu does not exist.</string>
     <string name="canNotFindAnyCpusInSysDevicesSystemCpu">Can\'t find any CPUs in /sys/devices/system/cpu.</string>
     <string name="canNotReadFrequencyOfACpu">Can\'t read frequency of a CPU.</string>
     <string name="enableRootGloballyFirstToUseThisFeature">Enable root globally first to use this feature.</string>
-    <string name="noThermalZonesFound">No thermal zones found</string>
+    <string name="noThermalZonesFound">No thermal zones found. This app may not work on your device. Try enabling root, if available.</string>
+    <string name="noThermalZonesFoundRoot">No thermal zones found. This app may not work on your device.</string>
     <string name="couldNotFindAnyThermalZones">Could not find any thermal zones</string>
     <string name="topLeft">Top Left</string>
     <string name="topRight">Top Right</string>
