--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,23 +24,23 @@
     <string name="rootAccessDenied">Root access denied</string>
     <string name="couldNotAcquireRootAccess">Could not acquire root access. Make sure your devices is rooted and you permitted root access for this application.</string>
     <string name="thermalMonitoringNotAvailable">Thermal Monitoring not available</string>
-    <string name="sysClassThermalDoesNotExist">/sys/class/thermal does not exist. This app may not work on your device. Try enabling root, if available.</string>
+    <string name="sysClassThermalDoesNotExist">/sys/class/thermal does not exist. This application may not work on your device. Try enabling root, if available.</string>
     <string name="noValidThermalZonesAreEnabled">No valid thermal zones are enabled.</string>
-    <string name="couldNotReadThermalZones">Couldn\'t read thermal zones using root. This app may not work on your device.</string>
-    <string name="canNotReadTypeOfAThermalZone">Can\'t read type of a thermal zone. This app may not work on your device. Try enabling root, if available.</string>
-    <string name="canNotReadTypeOfAThermalZoneRoot">Can\'t read type of a thermal zone. This app may not work on your device.</string>
-    <string name="canNotReadTemperatureOfAThermalZone">Can\'t read temp of a thermal zone. This app may not work on your device. Try enabling root, if available.</string>
-    <string name="canNotReadTemperatureOfAThermalZoneRoot">Can\'t read temp of a thermal zone. This app may not work on your device.</string>
+    <string name="couldNotReadThermalZones">Couldn\'t read thermal zones using root. This application may not work on your device.</string>
+    <string name="canNotReadTypeOfAThermalZone">Can\'t read type of a thermal zone. This application may not work on your device. Try enabling root, if available.</string>
+    <string name="canNotReadTypeOfAThermalZoneRoot">Can\'t read type of a thermal zone. This application may not work on your device.</string>
+    <string name="canNotReadTemperatureOfAThermalZone">Can\'t read temp of a thermal zone. This application may not work on your device. Try enabling root, if available.</string>
+    <string name="canNotReadTemperatureOfAThermalZoneRoot">Can\'t read temp of a thermal zone. This application may not work on your device.</string>
     <string name="noRootIpcObjectPassedToMonitor">No root IPC object passed to monitor (root globally disabled?).</string>
     <string name="unknownError">Unknown error.</string>
-    <string name="monitorConfigurationInvalid">Monitor configuration invalid. Please try to reset the app.</string>
+    <string name="monitorConfigurationInvalid">Monitor configuration invalid. Please try to reset the application.</string>
     <string name="cpuFrequencyMonitoringNotAvailable">CPU frequency monitoring not available</string>
     <string name="sysDevicesSystemCpuDoesNotExist">/sys/devices/system/cpu does not exist.</string>
     <string name="canNotFindAnyCpusInSysDevicesSystemCpu">Can\'t find any CPUs in /sys/devices/system/cpu.</string>
     <string name="canNotReadFrequencyOfACpu">Can\'t read frequency of a CPU.</string>
     <string name="enableRootGloballyFirstToUseThisFeature">Enable root globally first to use this feature.</string>
-    <string name="noThermalZonesFound">No thermal zones found. This app may not work on your device. Try enabling root, if available.</string>
-    <string name="noThermalZonesFoundRoot">No thermal zones found. This app may not work on your device.</string>
+    <string name="noThermalZonesFound">No thermal zones found. This application may not work on your device. Try enabling root, if available.</string>
+    <string name="noThermalZonesFoundRoot">No thermal zones found. This application may not work on your device.</string>
     <string name="couldNotFindAnyThermalZones">Could not find any thermal zones</string>
     <string name="topLeft">Top Left</string>
     <string name="topRight">Top Right</string>
@@ -66,12 +66,12 @@
     <string name="title_activity_licenses">Licenses</string>
     <string name="next">next</string>
     <string name="finish">finish</string>
-    <string name="welcome_text">TODO: Welcome text</string>
+    <string name="welcome_text">This application allows you to monitor the temperature of your device as you\'re using it.\n\nThis wizard will guide you through the steps required to setup this application on your device.\n\nPlease keep in mind, that this application relies on the manufacturers support of exposing the component temperatures, thus it may not work on every device. On some devices root access is required.</string>
     <string name="welcome">Welcome</string>
     <string name="overlay">Overlay</string>
     <string name="overlay_permission_not_enabled_text">Overlay permission not enabled, open overlay settings to enable.</string>
     <string name="overlay_permission_not_enabled">Overlay permission not enabled</string>
-    <string name="overlay_permission_explanation">For the app to work, you need to enable a special permission, allowing this application to draw overlays over other applications. Press the button below to open the Android system dialog where you can enable this setting.</string>
+    <string name="overlay_permission_explanation">For the application to work, you need to enable a special permission, allowing this application to draw overlays over other applications. Press the button below to open the Android system dialog where you can enable this setting.</string>
     <string name="overlay_permission_note">For security, older versions of Android might disable some features while the overlay is running. For example it might not be possible to install an application from an external source (the install button will not work). To fix this, it is enough to stop the service of this application while these features are required.</string>
     <string name="thermal_monitor">Thermal Monitor</string>
     <string name="info">Info</string>
