Switch to string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,32 @@
     <string name="thermal_monitor">Thermal Monitor</string>
     <string name="info">Info</string>
     <string name="description_notification_channel_default">Used for the required persistent notification of the service.</string>
+    <string name="global">Global</string>
+    <string name="enable_root_features">Enable root features</string>
+    <string name="overlay_permission_setting_summary">This Android system level setting needs to be enabled before the app is allowed to draw the overlay.</string>
+    <string name="open_overlay_permission_setting">Open overlay permission setting</string>
+    <string name="ui">UI</string>
+    <string name="monitoring_modules">Monitoring Modules</string>
+    <string name="cpu_frequency_monitor">CPU Frequency Monitor</string>
+    <string name="check_compatibility_summary">Check the compatibility of this module with the current settings.</string>
+    <string name="enable_cpu_frequency_monitoring">Enable CPU frequency monitoring</string>
+    <string name="refresh_interval_summary">Choose the refresh interval to use in milliseconds.</string>
+    <string name="refresh_interval">Refresh interval</string>
+    <string name="enable_thermal_monitoring">Enable thermal monitoring</string>
+    <string name="use_root_to_access_thermal_zones">Use root to access thermal zones</string>
+    <string name="temperature_scale_summary">Choose the temperature scale to use.</string>
+    <string name="temperature_scale">Temperature scale</string>
+    <string name="thermal_zones_summary">Select the thermal zones to monitor.</string>
+    <string name="thermal_zones">Thermal zones</string>
+    <string name="overlay_position_summary">Choose the position of the overlay to appear in.</string>
+    <string name="overlay_position">Overlay position</string>
+    <string name="background_color_summary">Choose the background color and the transparency of the overlay.</string>
+    <string name="background_color">Background color</string>
+    <string name="text_color_summary">Choose the text color to use on the overlay.</string>
+    <string name="text_color">Text color</string>
+    <string name="text_size_summary">Choose the size of the text to use on the overlay.</string>
+    <string name="text_size">Text size</string>
+    <string name="show_labels">Show labels</string>
+    <string name="label_width_summary">Choose the width used for the labels in the overlay.</string>
+    <string name="label_width">Label width</string>
 </resources>
